# serpix

./: README.md  TODO  TODO.txt  pyproject.toml  requirements.txt  tox.ini  update.sh
.github/workflows/: ci.yml  test.yml
app/: __main__.py  commands.py  core.py  utils.py
app/cli/: commands.py  core.py  utils.py
app/cli/handlers/: __init__.py  cat_handler.py  cut_handler.py  head_handler.py  tail_handler.py  uniq_handler.py  wc_handler.py
app/cli/utils/: cat_utils.py  head_utils.py  tail_utils.py  wc_utils.py
scripts/: update_file.sh
tests/: test_cat.py  test_cut.py  test_head.py  test_tail.py  test_uniq.py  test_wc.py
tests/resources/: books1.tsv  books2.csv  log.txt  quotes2.txt  skip-letters.md
tests/resources/common/: poem.txt
tests/resources/cut/: books1.tsv  books2.csv  books3.csv
tests/resources/uniq/: duplicates.txt  first_letters.txt  ignore_case.md  mini_duplicates.txt
